tests/file_SyntaxError/file_SyntaxError_2_expected.txt
[36mtests/file_SyntaxError/file_SyntaxError_2.ml:1 20-21
[0m1 | let a = (print_char [31m'[0ma)
                        ^

The syntax's' wrong.
Note: the location indicated might not be accurate.
